seperate collab procedure

--- a/TextEmbedding/text-embeddings-demo.ipynb
+++ b/TextEmbedding/text-embeddings-demo.ipynb
@@ -104,7 +104,13 @@
     }
    ],
    "source": [
-    "%pip install kagglehub matplotlib nltk numpy pandas seaborn torch scikit-learn ipywidgets sentence-transformers streamlit nbformat\n"
+    "%pip install kagglehub matplotlib nltk numpy pandas seaborn torch scikit-learn ipywidgets sentence-transformers streamlit nbformat\n",
+    "\n",
+    "try:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
+    "except:\n",
+    "    pass # Not running in Colab"
    ]
   },
   {
