lets clean up code

--- a/Databases/DatabasesLab.ipynb
+++ b/Databases/DatabasesLab.ipynb
@@ -62,49 +62,49 @@
    },
    "cell_type": "code",
    "source": [
-    "import overpy\n",
+    "# import overpy\n",
+    "#\n",
+    "# api = overpy.Overpass()\n",
+    "#\n",
+    "# # Query for all cafes in a specific area\n",
+    "# query = \"\"\"\n",
+    "# [out:json];\n",
+    "# area[\"name\"=\"San Diego\"][\"admin_level\"=\"8\"]->.searchArea;\n",
+    "# (\n",
+    "#   node[\"place\"=\"neighbourhood\"](area.searchArea);\n",
+    "#   way[\"place\"=\"neighbourhood\"](area.searchArea);\n",
+    "#   relation[\"place\"=\"neighbourhood\"](area.searchArea);\n",
+    "# );\n",
+    "# out body;\n",
+    "# >;\n",
+    "# out skel qt;\n",
+    "#\n",
+    "# \"\"\"\n",
+    "# # Execute the query\n",
+    "# result = api.query(query)\n",
     "\n",
-    "api = overpy.Overpass()\n",
-    "\n",
-    "# Query for all cafes in a specific area\n",
-    "query = \"\"\"\n",
-    "[out:json];\n",
-    "area[\"name\"=\"San Diego\"][\"admin_level\"=\"8\"]->.searchArea;\n",
-    "(\n",
-    "  node[\"place\"=\"neighbourhood\"](area.searchArea);\n",
-    "  way[\"place\"=\"neighbourhood\"](area.searchArea);\n",
-    "  relation[\"place\"=\"neighbourhood\"](area.searchArea);\n",
-    ");\n",
-    "out body;\n",
-    ">;\n",
-    "out skel qt;\n",
-    "\n",
-    "\"\"\"\n",
-    "# Execute the query\n",
-    "result = api.query(query)\n",
-    "\n",
-    "# Extract and print neighborhood names\n",
-    "neighborhoods = set()\n",
-    "\n",
-    "# Iterate over nodes\n",
-    "for node in result.nodes:\n",
-    "    if \"name\" in node.tags:\n",
-    "        neighborhoods.add(node.tags[\"name\"])\n",
-    "\n",
-    "# Iterate over ways\n",
-    "for way in result.ways:\n",
-    "    if \"name\" in way.tags:\n",
-    "        neighborhoods.add(way.tags[\"name\"])\n",
-    "\n",
-    "# Iterate over relations\n",
-    "for relation in result.relations:\n",
-    "    if \"name\" in relation.tags:\n",
-    "        neighborhoods.add(relation.tags[\"name\"])\n",
-    "\n",
-    "# Print the list of neighborhoods\n",
-    "print(\"Neighborhoods in San Diego:\")\n",
-    "for neighborhood in sorted(neighborhoods):\n",
-    "    print(neighborhood)"
+    "# # Extract and print neighborhood names\n",
+    "# neighborhoods = set()\n",
+    "#\n",
+    "# # Iterate over nodes\n",
+    "# for node in result.nodes:\n",
+    "#     if \"name\" in node.tags:\n",
+    "#         neighborhoods.add(node.tags[\"name\"])\n",
+    "#\n",
+    "# # Iterate over ways\n",
+    "# for way in result.ways:\n",
+    "#     if \"name\" in way.tags:\n",
+    "#         neighborhoods.add(way.tags[\"name\"])\n",
+    "#\n",
+    "# # Iterate over relations\n",
+    "# for relation in result.relations:\n",
+    "#     if \"name\" in relation.tags:\n",
+    "#         neighborhoods.add(relation.tags[\"name\"])\n",
+    "#\n",
+    "# # Print the list of neighborhoods\n",
+    "# print(\"Neighborhoods in San Diego:\")\n",
+    "# for neighborhood in sorted(neighborhoods):\n",
+    "#     print(neighborhood)"
    ],
    "outputs": [
     {
@@ -270,17 +270,6 @@
    ]
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# First let's get the census data\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
@@ -289,22 +278,22 @@
     }
    },
    "source": [
-    "# Create database connection\n",
-    "conn = sqlite3.connect('neighborhood_analysis.db')\n",
-    "cursor = conn.cursor()\n",
-    "\n",
-    "# Create tables HERE\n",
-    "cursor.execute('''\n",
-    "CREATE TABLE ...\n",
-    ")''')\n",
-    "\n",
-    "cursor.execute('''\n",
-    "CREATE TABLE ...\n",
-    ")''')\n",
-    "\n",
-    "cursor.execute('''\n",
-    "CREATE TABLE ...\n",
-    ")''')\n",
+    "# # Create database connection\n",
+    "# conn = sqlite3.connect('neighborhood_analysis.db')\n",
+    "# cursor = conn.cursor()\n",
+    "#\n",
+    "# # Create tables HERE\n",
+    "# cursor.execute('''\n",
+    "# CREATE TABLE ...\n",
+    "# )''')\n",
+    "#\n",
+    "# cursor.execute('''\n",
+    "# CREATE TABLE ...\n",
+    "# )''')\n",
+    "#\n",
+    "# cursor.execute('''\n",
+    "# CREATE TABLE ...\n",
+    "# )''')\n",
     "\n"
    ],
    "outputs": [
@@ -324,11 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T00:11:53.937231Z",
+     "start_time": "2024-11-23T00:11:53.932140Z"
+    }
+   },
    "source": [
     "## Part 2: Data Collection Tasks\n",
+    "import overpy\n",
+    "api = overpy.Overpass()\n",
     "\n",
     "def get_neighborhood_boundaries(city: str, state: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -342,7 +336,33 @@
     "        DataFrame containing neighborhood boundaries and names\n",
     "    \"\"\"\n",
     "    # Your code here\n",
-    "    pass\n",
+    "    query = f\"\"\"\n",
+    "    [out:json];\n",
+    "    area[\"name\"=\"{city}\"][\"boundary\"=\"administrative\"][\"admin_level\"=\"8\"]->.searchArea;\n",
+    "    (\n",
+    "      relation[\"place\"=\"neighbourhood\"](area.searchArea);\n",
+    "    );\n",
+    "    out body;\n",
+    "    >;\n",
+    "    out skel qt;\n",
+    "    \"\"\"\n",
+    "    # Execute the query\n",
+    "    result = api.query(query)\n",
+    "    data = []\n",
+    "    for relation in result.relations:\n",
+    "        # Get the name and boundary (if available)\n",
+    "        name = relation.tags.get(\"name\", \"Unknown\")\n",
+    "        geometry = relation.tags.get(\"boundary\", None)\n",
+    "\n",
+    "        # Append the data\n",
+    "        data.append({\n",
+    "            \"neighborhood\": name,\n",
+    "            \"geometry\": geometry,\n",
+    "        })\n",
+    "\n",
+    "    # Convert the data to a pandas DataFrame\n",
+    "    df = pd.DataFrame(data)\n",
+    "    return df\n",
     "\n",
     "\n",
     "def get_points_of_interest(bbox: tuple) -> pd.DataFrame:\n",
@@ -387,7 +407,80 @@
     "    \"\"\"\n",
     "    # Your code here\n",
     "    pass\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T00:11:55.169102Z",
+     "start_time": "2024-11-23T00:11:54.527639Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "get_neighborhood_boundaries(\"San Diego\", \"CA\")",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Pepper Canyon', 'place': 'neighbourhood', 'type': 'multipolygon'}\n",
+      "{'name': 'Ocean View Hills', 'place': 'neighbourhood', 'type': 'multipolygon'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "       neighborhood geometry\n",
+       "0     Pepper Canyon     None\n",
+       "1  Ocean View Hills     None"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pepper Canyon</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ocean View Hills</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 33
   },
   {
    "cell_type": "code",
