working on neighborhood boundaries

--- a/Databases/DatabasesLab.ipynb
+++ b/Databases/DatabasesLab.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T23:57:57.355279Z",
-     "start_time": "2024-11-22T23:57:57.352768Z"
+     "end_time": "2024-11-23T00:13:46.031863Z",
+     "start_time": "2024-11-23T00:13:46.029728Z"
     }
    },
    "cell_type": "code",
@@ -13,14 +13,14 @@
     "# %pip install overpy geopandas matplotlib"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 34
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T23:57:57.366519Z",
-     "start_time": "2024-11-22T23:57:57.364334Z"
+     "end_time": "2024-11-23T00:13:46.043093Z",
+     "start_time": "2024-11-23T00:13:46.041037Z"
     }
    },
    "source": [
@@ -39,197 +39,19 @@
     "from sklearn.preprocessing import StandardScaler"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T23:57:57.371975Z",
-     "start_time": "2024-11-22T23:57:57.370377Z"
+     "end_time": "2024-11-23T00:13:46.047092Z",
+     "start_time": "2024-11-23T00:13:46.045555Z"
     }
    },
    "cell_type": "code",
    "source": "census_api_key = \"8f75f43b286ec9dca28f4cf8040e681b096ae03e\"",
    "outputs": [],
-   "execution_count": 15
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-23T00:02:45.435559Z",
-     "start_time": "2024-11-23T00:02:44.091457Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# import overpy\n",
-    "#\n",
-    "# api = overpy.Overpass()\n",
-    "#\n",
-    "# # Query for all cafes in a specific area\n",
-    "# query = \"\"\"\n",
-    "# [out:json];\n",
-    "# area[\"name\"=\"San Diego\"][\"admin_level\"=\"8\"]->.searchArea;\n",
-    "# (\n",
-    "#   node[\"place\"=\"neighbourhood\"](area.searchArea);\n",
-    "#   way[\"place\"=\"neighbourhood\"](area.searchArea);\n",
-    "#   relation[\"place\"=\"neighbourhood\"](area.searchArea);\n",
-    "# );\n",
-    "# out body;\n",
-    "# >;\n",
-    "# out skel qt;\n",
-    "#\n",
-    "# \"\"\"\n",
-    "# # Execute the query\n",
-    "# result = api.query(query)\n",
-    "\n",
-    "# # Extract and print neighborhood names\n",
-    "# neighborhoods = set()\n",
-    "#\n",
-    "# # Iterate over nodes\n",
-    "# for node in result.nodes:\n",
-    "#     if \"name\" in node.tags:\n",
-    "#         neighborhoods.add(node.tags[\"name\"])\n",
-    "#\n",
-    "# # Iterate over ways\n",
-    "# for way in result.ways:\n",
-    "#     if \"name\" in way.tags:\n",
-    "#         neighborhoods.add(way.tags[\"name\"])\n",
-    "#\n",
-    "# # Iterate over relations\n",
-    "# for relation in result.relations:\n",
-    "#     if \"name\" in relation.tags:\n",
-    "#         neighborhoods.add(relation.tags[\"name\"])\n",
-    "#\n",
-    "# # Print the list of neighborhoods\n",
-    "# print(\"Neighborhoods in San Diego:\")\n",
-    "# for neighborhood in sorted(neighborhoods):\n",
-    "#     print(neighborhood)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neighborhoods in San Diego:\n",
-      "Alta Vista\n",
-      "Asian Pacific Thematic Historic District\n",
-      "Azalea Park\n",
-      "Azure Vista\n",
-      "Barrio Logan\n",
-      "Bay Park\n",
-      "Bayridge\n",
-      "Biology Field Station\n",
-      "Birdland\n",
-      "Broadway Heights\n",
-      "Burlingame\n",
-      "Campus Services Complex\n",
-      "Carmel Mountain Ranch\n",
-      "Castle\n",
-      "Cherokee Point\n",
-      "Chollas Creek\n",
-      "Chollas View\n",
-      "Civita\n",
-      "Colina Park\n",
-      "Core-Columbia\n",
-      "Cortez Hill\n",
-      "County Road 111 Colonia\n",
-      "Crown Point\n",
-      "Darnall\n",
-      "Del Mar Heights\n",
-      "Del Mar Mesa\n",
-      "Earl Warren College\n",
-      "East San Diego\n",
-      "East Village\n",
-      "El Cerrito Heights\n",
-      "Eleanor Roosevelt College\n",
-      "Emerald Hills\n",
-      "Fairmount Park\n",
-      "Five Points\n",
-      "Fleetridge\n",
-      "Fort Rosecrans\n",
-      "Fruitdale\n",
-      "Girales\n",
-      "Golden Hill\n",
-      "Grant Hill\n",
-      "Harborview\n",
-      "Hollywood Park\n",
-      "Invu San Diego\n",
-      "Islenair\n",
-      "John Muir College\n",
-      "Kensington\n",
-      "La Jolla Colony\n",
-      "La Jolla Farms\n",
-      "La Jolla Mesa\n",
-      "La Jolla Shores\n",
-      "La Playa\n",
-      "Lincoln Park\n",
-      "Little India\n",
-      "Little Italy\n",
-      "Logan Heights\n",
-      "Loma Portal\n",
-      "Lomita\n",
-      "Marina\n",
-      "Marina District\n",
-      "Middletown\n",
-      "Miramar\n",
-      "Montezuma Mesa\n",
-      "Morena\n",
-      "Mount Hope\n",
-      "Mountain View\n",
-      "Nestor\n",
-      "North Bay Terraces\n",
-      "North Campus\n",
-      "North Clairemont\n",
-      "Oak Park\n",
-      "Ocean View Hills\n",
-      "Otay Mesa West\n",
-      "Pacific Highlands Ranch\n",
-      "Palm City\n",
-      "Park Haven\n",
-      "Parkview\n",
-      "Pepper Canyon\n",
-      "Rancho Encantada\n",
-      "Revelle College\n",
-      "Ridgeview\n",
-      "Rincón Mesén\n",
-      "Riviera Shores\n",
-      "Rolando\n",
-      "Rolando Park\n",
-      "Roseville\n",
-      "Sabre Springs\n",
-      "San Martín\n",
-      "Santiago del Monte\n",
-      "Science Research Park\n",
-      "Scripps Ranch\n",
-      "Seventh College at the Village\n",
-      "Sherman Heights\n",
-      "Sixth College\n",
-      "South Bay Terraces\n",
-      "South Crest\n",
-      "South Encanto\n",
-      "South Park\n",
-      "Sunset\n",
-      "Sunset Cliffs\n",
-      "Swan Canyon\n",
-      "Tacona\n",
-      "Talmadge\n",
-      "The Landing at Ocean View Hills\n",
-      "The Muirlands\n",
-      "Thurgood Marshall College\n",
-      "Torrey Hills\n",
-      "University Center\n",
-      "University City\n",
-      "University Heights\n",
-      "Valencia Park\n",
-      "Village of La Jolla\n",
-      "Vista del Pacifico\n",
-      "Webster\n",
-      "Wooded Area\n"
-     ]
-    }
-   ],
-   "execution_count": 22
+   "execution_count": 36
   },
   {
    "cell_type": "markdown",
@@ -273,8 +95,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T23:57:58.122114Z",
-     "start_time": "2024-11-22T23:01:47.286170Z"
+     "end_time": "2024-11-23T00:13:46.053680Z",
+     "start_time": "2024-11-23T00:13:46.052079Z"
     }
    },
    "source": [
@@ -293,30 +115,17 @@
     "#\n",
     "# cursor.execute('''\n",
     "# CREATE TABLE ...\n",
-    "# )''')\n",
-    "\n"
+    "# )''')"
    ],
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "near \".\": syntax error",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[2], line 6\u001B[0m\n\u001B[1;32m      3\u001B[0m cursor \u001B[38;5;241m=\u001B[39m conn\u001B[38;5;241m.\u001B[39mcursor()\n\u001B[1;32m      5\u001B[0m \u001B[38;5;66;03m# Create tables HERE\u001B[39;00m\n\u001B[0;32m----> 6\u001B[0m cursor\u001B[38;5;241m.\u001B[39mexecute(\u001B[38;5;124m'''\u001B[39m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;124mCREATE TABLE ...\u001B[39m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;124m)\u001B[39m\u001B[38;5;124m'''\u001B[39m)\n\u001B[1;32m     10\u001B[0m cursor\u001B[38;5;241m.\u001B[39mexecute(\u001B[38;5;124m'''\u001B[39m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;124mCREATE TABLE ...\u001B[39m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;124m)\u001B[39m\u001B[38;5;124m'''\u001B[39m)\n\u001B[1;32m     14\u001B[0m cursor\u001B[38;5;241m.\u001B[39mexecute(\u001B[38;5;124m'''\u001B[39m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;124mCREATE TABLE ...\u001B[39m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;124m)\u001B[39m\u001B[38;5;124m'''\u001B[39m)\n",
-      "\u001B[0;31mOperationalError\u001B[0m: near \".\": syntax error"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": 37
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-23T00:11:53.937231Z",
-     "start_time": "2024-11-23T00:11:53.932140Z"
+     "end_time": "2024-11-23T00:13:53.269733Z",
+     "start_time": "2024-11-23T00:13:53.264226Z"
     }
    },
    "source": [
@@ -337,11 +146,12 @@
     "    \"\"\"\n",
     "    # Your code here\n",
     "    query = f\"\"\"\n",
-    "    [out:json];\n",
-    "    area[\"name\"=\"{city}\"][\"boundary\"=\"administrative\"][\"admin_level\"=\"8\"]->.searchArea;\n",
-    "    (\n",
-    "      relation[\"place\"=\"neighbourhood\"](area.searchArea);\n",
-    "    );\n",
+    "    [out:json][timeout:25];\n",
+    "    // Search for the administrative boundary of the city and state\n",
+    "    area[\"name\"=\"California\"]->.stateArea; // Replace with the state name\n",
+    "    relation[\"name\"=\"San Diego\"][\"admin_level\"=\"8\"](area.stateArea); // Replace with the city name\n",
+    "\n",
+    "    // Output the result\n",
     "    out body;\n",
     "    >;\n",
     "    out skel qt;\n",
@@ -409,26 +219,18 @@
     "    pass\n"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-23T00:11:55.169102Z",
-     "start_time": "2024-11-23T00:11:54.527639Z"
+     "end_time": "2024-11-23T00:13:55.693581Z",
+     "start_time": "2024-11-23T00:13:53.860668Z"
     }
    },
    "cell_type": "code",
    "source": "get_neighborhood_boundaries(\"San Diego\", \"CA\")",
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Pepper Canyon', 'place': 'neighbourhood', 'type': 'multipolygon'}\n",
-      "{'name': 'Ocean View Hills', 'place': 'neighbourhood', 'type': 'multipolygon'}\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -475,12 +277,12 @@
        "</div>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 33
+   "execution_count": 39
   },
   {
    "cell_type": "code",
