--- a/Databases/DatabasesLab.ipynb
+++ b/Databases/DatabasesLab.ipynb
@@ -124,55 +124,81 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-23T00:13:53.269733Z",
-     "start_time": "2024-11-23T00:13:53.264226Z"
+     "end_time": "2024-11-23T00:36:26.905527Z",
+     "start_time": "2024-11-23T00:36:26.900370Z"
     }
    },
    "source": [
     "## Part 2: Data Collection Tasks\n",
     "import overpy\n",
+    "\n",
     "api = overpy.Overpass()\n",
+    "\n",
+    "\n",
+    "# todo: could skip and get amentities\n",
     "\n",
     "def get_neighborhood_boundaries(city: str, state: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Get neighborhood boundaries using OpenStreetMap API\n",
-    "    \n",
+    "    Get neighborhood boundaries using OpenStreetMap API.\n",
+    "\n",
     "    Parameters:\n",
     "        city: Name of the city\n",
-    "        state: State abbreviation (e.g. 'MA')\n",
-    "        \n",
+    "        state: State name\n",
+    "\n",
     "    Returns:\n",
-    "        DataFrame containing neighborhood boundaries and names\n",
+    "        DataFrame containing neighborhood names and their bounding boxes (min x, min y, max x, max y).\n",
     "    \"\"\"\n",
-    "    # Your code here\n",
+    "    # Overpass API query to get neighborhood boundaries\n",
     "    query = f\"\"\"\n",
     "    [out:json][timeout:25];\n",
-    "    // Search for the administrative boundary of the city and state\n",
-    "    area[\"name\"=\"California\"]->.stateArea; // Replace with the state name\n",
-    "    relation[\"name\"=\"San Diego\"][\"admin_level\"=\"8\"](area.stateArea); // Replace with the city name\n",
-    "\n",
-    "    // Output the result\n",
+    "    area[\"name\"=\"{state}\"]->.stateArea;\n",
+    "    relation[\"name\"=\"{city}\"][\"admin_level\"=\"8\"](area.stateArea);\n",
     "    out body;\n",
     "    >;\n",
     "    out skel qt;\n",
     "    \"\"\"\n",
-    "    # Execute the query\n",
-    "    result = api.query(query)\n",
-    "    data = []\n",
-    "    for relation in result.relations:\n",
-    "        # Get the name and boundary (if available)\n",
-    "        name = relation.tags.get(\"name\", \"Unknown\")\n",
-    "        geometry = relation.tags.get(\"boundary\", None)\n",
     "\n",
-    "        # Append the data\n",
-    "        data.append({\n",
-    "            \"neighborhood\": name,\n",
-    "            \"geometry\": geometry,\n",
-    "        })\n",
+    "    try:\n",
+    "        # Execute the query\n",
+    "        result = api.query(query)\n",
     "\n",
-    "    # Convert the data to a pandas DataFrame\n",
-    "    df = pd.DataFrame(data)\n",
-    "    return df\n",
+    "        # Collect neighborhood data\n",
+    "        data = []\n",
+    "        for relation in result.relations:\n",
+    "            # Get the name of the neighborhood (if available)\n",
+    "            name = relation.tags.get(\"name\", \"Unknown\")\n",
+    "\n",
+    "            # Initialize bounding box values\n",
+    "            min_x, min_y = float('inf'), float('inf')\n",
+    "            max_x, max_y = float('-inf'), float('-inf')\n",
+    "\n",
+    "            # Extract coordinates and update bounding box\n",
+    "            for member in relation.members:\n",
+    "                if member.role == \"outer\" and isinstance(member, overpy.RelationWay):\n",
+    "                    way = member.resolve()\n",
+    "                    for node in way.nodes:\n",
+    "                        lat, lon = node.lat, node.lon\n",
+    "                        min_x = min(min_x, lon)\n",
+    "                        max_x = max(max_x, lon)\n",
+    "                        min_y = min(min_y, lat)\n",
+    "                        max_y = max(max_y, lat)\n",
+    "\n",
+    "            # Append bounding box data\n",
+    "            data.append({\n",
+    "                \"name\": name,\n",
+    "                \"min_x\": min_x,\n",
+    "                \"min_y\": min_y,\n",
+    "                \"max_x\": max_x,\n",
+    "                \"max_y\": max_y\n",
+    "            })\n",
+    "\n",
+    "        # Convert the data to a pandas DataFrame\n",
+    "        df = pd.DataFrame(data)\n",
+    "        return df\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return pd.DataFrame()\n",
     "\n",
     "\n",
     "def get_points_of_interest(bbox: tuple) -> pd.DataFrame:\n",
@@ -219,24 +245,23 @@
     "    pass\n"
    ],
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-23T00:13:55.693581Z",
-     "start_time": "2024-11-23T00:13:53.860668Z"
+     "end_time": "2024-11-23T00:36:29.395468Z",
+     "start_time": "2024-11-23T00:36:27.543472Z"
     }
    },
    "cell_type": "code",
-   "source": "get_neighborhood_boundaries(\"San Diego\", \"CA\")",
+   "source": "get_neighborhood_boundaries(\"San Diego\", \"California\")",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "       neighborhood geometry\n",
-       "0     Pepper Canyon     None\n",
-       "1  Ocean View Hills     None"
+       "        name         min_x       min_y         max_x       max_y\n",
+       "0  San Diego  -117.3098161  32.5347979  -116.9057417  33.1141940"
       ],
       "text/html": [
        "<div>\n",
@@ -257,32 +282,33 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>neighborhood</th>\n",
-       "      <th>geometry</th>\n",
+       "      <th>name</th>\n",
+       "      <th>min_x</th>\n",
+       "      <th>min_y</th>\n",
+       "      <th>max_x</th>\n",
+       "      <th>max_y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Pepper Canyon</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ocean View Hills</td>\n",
-       "      <td>None</td>\n",
+       "      <td>San Diego</td>\n",
+       "      <td>-117.3098161</td>\n",
+       "      <td>32.5347979</td>\n",
+       "      <td>-116.9057417</td>\n",
+       "      <td>33.1141940</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 39
+   "execution_count": 48
   },
   {
    "cell_type": "code",
