--- a/Databases/DatabasesLab.ipynb
+++ b/Databases/DatabasesLab.ipynb
@@ -124,8 +124,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-23T00:36:26.905527Z",
-     "start_time": "2024-11-23T00:36:26.900370Z"
+     "end_time": "2024-11-23T00:58:39.144914Z",
+     "start_time": "2024-11-23T00:58:39.134931Z"
     }
    },
    "source": [
@@ -169,8 +169,8 @@
     "            name = relation.tags.get(\"name\", \"Unknown\")\n",
     "\n",
     "            # Initialize bounding box values\n",
-    "            min_x, min_y = float('inf'), float('inf')\n",
-    "            max_x, max_y = float('-inf'), float('-inf')\n",
+    "            min_lon, min_lat = float('inf'), float('inf')\n",
+    "            max_lon, max_lat = float('-inf'), float('-inf')\n",
     "\n",
     "            # Extract coordinates and update bounding box\n",
     "            for member in relation.members:\n",
@@ -178,18 +178,18 @@
     "                    way = member.resolve()\n",
     "                    for node in way.nodes:\n",
     "                        lat, lon = node.lat, node.lon\n",
-    "                        min_x = min(min_x, lon)\n",
-    "                        max_x = max(max_x, lon)\n",
-    "                        min_y = min(min_y, lat)\n",
-    "                        max_y = max(max_y, lat)\n",
+    "                        min_lon = min(min_lon, lon)\n",
+    "                        max_lon = max(max_lon, lon)\n",
+    "                        min_lat = min(min_lat, lat)\n",
+    "                        max_lat = max(max_lat, lat)\n",
     "\n",
     "            # Append bounding box data\n",
     "            data.append({\n",
     "                \"name\": name,\n",
-    "                \"min_x\": min_x,\n",
-    "                \"min_y\": min_y,\n",
-    "                \"max_x\": max_x,\n",
-    "                \"max_y\": max_y\n",
+    "                \"min_lon\": min_lon,\n",
+    "                \"min_lat\": min_lat,\n",
+    "                \"max_lon\": max_lon,\n",
+    "                \"max_lat\": max_lat\n",
     "            })\n",
     "\n",
     "        # Convert the data to a pandas DataFrame\n",
@@ -204,15 +204,73 @@
     "def get_points_of_interest(bbox: tuple) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Get POIs (schools, restaurants, parks, etc) using OpenStreetMap API\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "        bbox: Tuple of (min_lat, min_lon, max_lat, max_lon) defining search area\n",
-    "        \n",
+    "\n",
     "    Returns:\n",
     "        DataFrame containing POI locations and attributes\n",
     "    \"\"\"\n",
-    "    # Your code here \n",
-    "    pass\n",
+    "    # Unpack bounding box\n",
+    "    min_lat, min_lon, max_lat, max_lon = bbox\n",
+    "\n",
+    "    # Overpass API query to fetch POIs\n",
+    "    query = f\"\"\"\n",
+    "    [out:json][timeout:25];\n",
+    "    (\n",
+    "      node[\"amenity\"](bbox:{min_lat},{min_lon},{max_lat},{max_lon});\n",
+    "      way[\"amenity\"](bbox:{min_lat},{min_lon},{max_lat},{max_lon});\n",
+    "      relation[\"amenity\"](bbox:{min_lat},{min_lon},{max_lat},{max_lon});\n",
+    "    );\n",
+    "    out center; // Return center for ways and relations\n",
+    "    \"\"\"\n",
+    "\n",
+    "    try:\n",
+    "        # Execute the query\n",
+    "        result = api.query(query)\n",
+    "\n",
+    "        # Collect POI data\n",
+    "        data = []\n",
+    "\n",
+    "        # Nodes\n",
+    "        for node in result.nodes:\n",
+    "            data.append({\n",
+    "                \"type\": \"node\",\n",
+    "                \"id\": node.id,\n",
+    "                \"lat\": node.lat,\n",
+    "                \"lon\": node.lon,\n",
+    "                \"tags\": node.tags\n",
+    "            })\n",
+    "\n",
+    "        # Ways\n",
+    "        for way in result.ways:\n",
+    "            center = way.center\n",
+    "            data.append({\n",
+    "                \"type\": \"way\",\n",
+    "                \"id\": way.id,\n",
+    "                \"lat\": center.lat if center else None,\n",
+    "                \"lon\": center.lon if center else None,\n",
+    "                \"tags\": way.tags\n",
+    "            })\n",
+    "\n",
+    "        # Relations\n",
+    "        for relation in result.relations:\n",
+    "            center = relation.center\n",
+    "            data.append({\n",
+    "                \"type\": \"relation\",\n",
+    "                \"id\": relation.id,\n",
+    "                \"lat\": center.lat if center else None,\n",
+    "                \"lon\": center.lon if center else None,\n",
+    "                \"tags\": relation.tags\n",
+    "            })\n",
+    "\n",
+    "        # Convert the data to a pandas DataFrame\n",
+    "        df = pd.DataFrame(data)\n",
+    "        return df\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return pd.DataFrame()\n",
     "\n",
     "\n",
     "def get_census_data(city: str, state: str, api_key: str) -> pd.DataFrame:\n",
@@ -242,16 +300,27 @@
     "        Walkability score from 0-100\n",
     "    \"\"\"\n",
     "    # Your code here\n",
-    "    pass\n"
+    "    pass\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "[out:json][timeout:25];\n",
+    "    (\n",
+    "      node[\"amenity\"](bbox:32.5347979, -117.3098161, 33.1141940, -116.9057417);\n",
+    "      way[\"amenity\"](bbox:32.5347979, -117.3098161, 33.1141940, -116.9057417);\n",
+    "      relation[\"amenity\"](bbox:32.5347979, -117.3098161, 33.1141940, -116.9057417);\n",
+    "    );\n",
+    "    out center; // Return center for ways and relations\n",
+    "'''"
    ],
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-23T00:36:29.395468Z",
-     "start_time": "2024-11-23T00:36:27.543472Z"
+     "end_time": "2024-11-23T00:47:13.650943Z",
+     "start_time": "2024-11-23T00:47:11.737748Z"
     }
    },
    "cell_type": "code",
@@ -260,7 +329,7 @@
     {
      "data": {
       "text/plain": [
-       "        name         min_x       min_y         max_x       max_y\n",
+       "        name       min_lon     min_lat       max_lon     max_lat\n",
        "0  San Diego  -117.3098161  32.5347979  -116.9057417  33.1141940"
       ],
       "text/html": [
@@ -283,10 +352,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>min_x</th>\n",
-       "      <th>min_y</th>\n",
-       "      <th>max_x</th>\n",
-       "      <th>max_y</th>\n",
+       "      <th>min_lon</th>\n",
+       "      <th>min_lat</th>\n",
+       "      <th>max_lon</th>\n",
+       "      <th>max_lat</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -303,12 +372,41 @@
        "</div>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 48
+   "execution_count": 50
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T00:48:21.204928Z",
+     "start_time": "2024-11-23T00:48:21.188653Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "\n",
+    "my_bbox = (-117.3098161,)\n",
+    "get_points_of_interest()"
+   ],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_points_of_interest() missing 1 required positional argument: 'bbox'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[51], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m my_bbox \u001B[38;5;241m=\u001B[39m (\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m117.3098161\u001B[39m, )\n\u001B[0;32m----> 2\u001B[0m get_points_of_interest()\n",
+      "\u001B[0;31mTypeError\u001B[0m: get_points_of_interest() missing 1 required positional argument: 'bbox'"
+     ]
+    }
+   ],
+   "execution_count": 51
   },
   {
    "cell_type": "code",
